inclusao do tsyringe e complementacao da documentacao com o swagger
