# src/swagger.json
@@ -79,8 +79,74 @@
                 }
             }
         }
+    },
+
+    "/categories/import":{
+        "post":{
+            "tags":["Category"],
+            "sumary": "Upload a new Category",
+            "description": "Upload a new Category",
+            "requestBody":{
+                "content":{
+                    "multipart/form-data":{
+                        "schema":{
+                            "type":"object",
+                            "properties":{
+                                "file":{
+                                    "type": "string",
+                                    "format": "binary"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "responses":{
+                "201":{
+                    "description": "Created"
+                }
+            }
+        }
+    },
+
+    "/specifications": {
+        "post":{
+            "tags": ["Specifications"],
+            "sumary": "Create a specification",
+            "description": "Create a new specification",
+            "requestBody":{
+                "content":{
+                    "application/json":{
+                        "schema":{
+                            "$ref": "#/definitions/Specification"
+                        }
+                    }
+                }
+            },
+            "responses":{
+                "201":{
+                    "description": "Created"
+                },
+                "500":{
+                    "description": "Specification already exists"
+                }
+            }
+        }
     }
 
+    },
+    "definitions":{
+        "Specification":{
+            "type": "object",
+            "properties":{
+                "name":{
+                    "type":"string"
+                },
+                "description":{
+                    "type":"string"
+                }
+            }
+        }
     }
 
 }
